--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,61 +25,13 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.brand.goTop{href: "#"}
+          = link_to @cms_site.pages.root.full_path, class: "brand goTop" do
             = image_tag "header-logo.png"
           .nav-collapse.pull-right
             %ul.nav
-              %li.active
-                %a{href: "index.html"} Home
-              %li.dropdown
-                %a.dropdown-toggle{"data-toggle" => "dropdown", href: "#"}
-                  Pages
-                  %b.caret
-                %ul.dropdown-menu{role: "menu"}
-                  %li
-                    %a{href: "about.html"} About Us
-                  %li
-                    %a{href: "services.html"} Services
-                  %li
-                    %a{href: "price.html"} Price
-                  %li
-                    %a{href: "login.html"} Login
-                  %li
-                    %a{href: "register.html"} Register
-                  %li
-                    %a{href: "faq.html"} F.A.Q.
-                  %li
-                    %a{href: "contacts.html"} Contact
-              %li.dropdown
-                %a.dropdown-toggle{"data-toggle" => "dropdown", href: "#"}
-                  Blog
-                  %b.caret
-                %ul.dropdown-menu{role: "menu"}
-                  %li
-                    %a{href: "blog-right.html"} Blog right sidebar
-                  %li
-                    %a{href: "blog-left.html"} Blog left sidebar
-                  %li
-                    %a{href: "blog-full.html"} Blog full
-                  %li.divider
-                  %li
-                    %a{href: "blog-single.html"} Blog single one
-                  %li
-                    %a{href: "blog-single2.html"} Blog single two
-              %li.dropdown
-                %a.dropdown-toggle{"data-toggle" => "dropdown", href: "#"}
-                  Gallery
-                  %b.caret
-                %ul.dropdown-menu{role: "menu"}
-                  %li
-                    %a{href: "works.html"} Simple gallery
-                  %li
-                    %a{href: "works2.html"} With text
-                  %li
-                    %a{href: "works3.html"} With filter
-                  %li.divider
-                  %li
-                    %a{href: "works-single.html"} Single project
-              %li
-                %a{href: "shortcodes.html"} Shortcodes
+              %li{class: ("active" if current_page?(@cms_site.pages.root))}
+                = link_to @cms_site.pages.root.label.upcase, @cms_site.pages.root.full_path
+              - @cms_site.pages.root.children.published.each do |page|
+                %li{class: ("active" if current_page?(page))}
+                  = link_to page.label.upcase, page.full_path
     = yield
