Add Cloud66 badge to footer.

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -96,4 +96,7 @@
 
         .span3
           .pull-right
-            %p
+            %a{href: "http://www.cloud66.com"}
+              %img{src: "http://d563vzkt1q0lu.cloudfront.net/images/powered-by-cloud66.png", title: "Powered by Cloud 66"}
+
+
