--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %title MAKEspace
     %meta{charset: "utf-8"}/
     %meta{content: "IE=edge", "http-equiv" => "X-UA-Compatible"}/
-    %meta{content: "A hackerspace/makerspace located in State College, PA.", name: "description"}/
+    %meta{content: "Our hackerspace/makerspace located in State College, PA.", name: "description"}/
     %meta{content: "width=device-width, initial-scale=1", name: "viewport"}/
     = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Open+Sans:400,800,700,300,600,400italic&subset=latin,cyrillic"
     = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
