--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -28,7 +28,7 @@
                 %a{href: "https://twitter.com/TheMakeSpaceSC", target: "_blank", title: ""}
                   %i.icon-twitter
               %li
-                %a{href: "https://www.facebook.com/hackvalley", target: "_blank", title: ""}
+                %a{href: "https://www.facebook.com/the.make.space", target: "_blank", title: ""}
                   %i.icon-facebook
               -# %li
               -#   %a{href: "#", target: "_blank", title: ""}
