Add link to wiki.

--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -15,4 +15,6 @@
             %li{class: ("active" if current_page?(page))}
               = link_to page.label.upcase, page.full_path
           %li
-            = link_to "FORUM", "http://forum.makespace.io"
+            = link_to "WIKI", "//wiki.makespace.io"
+          %li
+            = link_to "FORUM", "//forum.makespace.io"
