--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -19,7 +19,7 @@
             %article.clearfix
               %i.icon-envelope
               %p
-                %a{href: "mailto:root@makespace.io"} root@makespace.io
+                %a{href: "mailto:contact@themakespace.com"} contact@themakespace.com
         .span3
           %h4 Follow us
           .social
