--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -25,10 +25,10 @@
           .social
             %ul.unstyled.clearfix
               %li
-                %a{href: "https://twitter.com/TheMakeSpaceSC", target: "_blank", title: ""}
+                %a{href: "//twitter.com/TheMakeSpaceSC", target: "_blank", title: ""}
                   %i.icon-twitter
               %li
-                %a{href: "https://www.facebook.com/the.make.space", target: "_blank", title: ""}
+                %a{href: "//www.facebook.com/the.make.space", target: "_blank", title: ""}
                   %i.icon-facebook
               -# %li
               -#   %a{href: "#", target: "_blank", title: ""}
@@ -40,10 +40,10 @@
               -#   %a{href: "#", target: "_blank", title: ""}
               -#     %i.icon-pinterest
               %li
-                %a{href: "https://plus.google.com/116879917434169348901/about?gl=US&hl=en-US", target: "_blank", title: ""}
+                %a{href: "//plus.google.com/116879917434169348901/about?gl=US&hl=en-US", target: "_blank", title: ""}
                   %i.icon-google-plus
               %li
-                %a{href: "http://hackerspaces.org/wiki/The_Make_Space", target: "_blank", title: "Our location on hackerspaces.org"}
+                %a{href: "//hackerspaces.org/wiki/The_Make_Space", target: "_blank", title: "Our location on hackerspaces.org"}
                   %i.icon-gear
               -# %li
               -#   %a{href: "#", target: "_blank", title: ""}
@@ -85,18 +85,18 @@
     .container
       .row
         .span1
-          %a{href: "http://creativecommons.org/licenses/by-sa/4.0/", rel: "license"}
-            %img{alt: "Creative Commons License", src: "http://i.creativecommons.org/l/by-sa/4.0/88x31.png", style: "border-width:0"}/
+          %a{href: "//creativecommons.org/licenses/by-sa/4.0/", rel: "license"}
+            %img{alt: "Creative Commons License", src: "//i.creativecommons.org/l/by-sa/4.0/88x31.png", style: "border-width:0"}/
         .span8
           %p.pull-left
             This work is licensed under a
-            %a{href: "http://creativecommons.org/licenses/by-sa/4.0/", rel: "license"} Creative Commons Attribution-ShareAlike 4.0 International License.
+            %a{href: "//creativecommons.org/licenses/by-sa/4.0/", rel: "license"} Creative Commons Attribution-ShareAlike 4.0 International License.
             Except where we stole content without permission. Which we might have done by accident. Copyright is tricky. ;p
 
 
         .span3
           .pull-right
-            %a{href: "http://www.cloud66.com"}
-              %img{src: "http://d563vzkt1q0lu.cloudfront.net/images/powered-by-cloud66.png", title: "Powered by Cloud 66"}
+            %a{href: "//www.cloud66.com"}
+              %img{src: "//d563vzkt1q0lu.cloudfront.net/images/powered-by-cloud66.png", title: "Powered by Cloud 66"}
 
 
