--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -15,6 +15,6 @@
             %li{class: ("active" if current_page?(page))}
               = link_to page.label.upcase, page.full_path
           %li
-            = link_to "WIKI", "//wiki.makespace.io"
+            = link_to "WIKI", "http://wiki.themakespace.com"
           %li
             = link_to "FORUM", "//forum.makespace.io"
